src/test/ui/issues/issue-26093.rs
macro_rules! not_a_place {
    ($thing:expr) => {
        $thing = 42;
        //~^ ERROR invalid left-hand side expression
    }
}

fn main() {
    not_a_place!(99);
}
